slider remis à jour

--- a/erreur.html
+++ b/erreur.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href='css/bd.css'rel="stylesheet" type="text/css"><!--css-->
+    <link rel="stylesheet" href='css/error.css'rel="stylesheet" type="text/css"><!--css-->
     <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"><!--favicon-->
     <title>Bill & Bobby</title>
 </head>
-<body id="body">
-    <div id="erreur">
-    <h2>Désolé ce n'est pas le bon mot de passe !</h2>
-    <img src="images/erreur/erreur.webp" id="imgErreur"></div>
-    <footer class="footer">© 2021 Vincent Lefebvre</footer>
+<body>
+
+<div id="main">
+    
+    <h1>👻 Désolé 🤓</h1>
+        <h1>Ce n'est pas le bon mot de passe !</h1>
+        <span><img src="images/erreur/erreur.webp"></span>
+    <span class="copyright"></span>
+</div>
+
+    <script src='js/billetbobby.js'></script><!-- fichier js-->
+
 </body>
 </html>
