ajout rubrique dessin actu

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 			<li onclick="imgSlider('images/webp/cristal_large.webp')"><img src="images/webp/cristal_thumb.webp" class="thumb" title="un voeu" alt="planche bd Bill et Bobby: Bill & Bobby ont droit à un voeu"></li>
 
 		</ul>
+		<ul class="navigation">
+			<label>actu</label>
+				<li onclick="imgSlider('images/webp/actu/norvege.webp')"><img src="#" class="thumb" title="norvege" alt="13/10/21"></li>
+		</ul>
 		</div>
 	</section>
 	<footer>
