ajout lien insta titre

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 <body>
 	<header>
-		<h1>Bill & Bobby</h1>
+
+		<!--<a href = 'https://www.instagram.com/20100lefebvre/?hl=fr'><img src="images/btn/instagram-icon.webp" alt="instagram" class="logo"></a>-->
+		<a href = 'https://www.instagram.com/20100lefebvre/?hl=fr' id="BillEtBobby" alt="instagram" title="instagram" ><h1>Bill & Bobby</h1></a>
 		<p>  Bobby est solitaire dans la vie et a beaucoup d'imagination. Il s'invente un ami imaginaire, Bill. </p>
+		
 	</header>
 	<section>
 		<div id="comics">
@@ -58,7 +61,7 @@
 		</ul>
 		<ul class="navigation">
 			<label>actu</label>
-				<li onclick="imgSlider('images/webp/actu/norvege.webp')"><img src="#" class="thumb" title="norvege" alt="13/10/21"></li>
+				<li onclick="imgSlider('images/webp/actu/norvege.webp')"><a class="thumb_actu" title="norvege" alt="13/10/21">13/10/21</a></li>
 		</ul>
 		</div>
 	</section>
@@ -66,11 +69,7 @@
 		<p class="copyright">
 			<!-- © 2021 Vincent Lefebvre -->
 		</p>
-		<ul>
-			<li>
-			<a href = 'https://www.instagram.com/20100lefebvre/?hl=fr'><img src="images/btn/instagram-icon.webp" alt="instagram" class="logo"></a>
-			</li>
-		</ul>
+	
 	</footer>
 
 	<script src='js/billetbobby.js'></script><!-- fichier js-->
