renommage et image pour bouton actu

--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 		<ul class="navigation">
 			
 		<label>2021</label>
-			<li onclick="imgSlider('images/webp/chifoumi_large.webp')"><img src="images/webp/chifoumi_thumb.webp" class="thumb" title="un voeu" alt="planche bd Bill et Bobby: Bill & Bobby ont droit à un voeu"></li>
-			<li onclick="imgSlider('images/webp/costume_large.webp')"><img src="images/webp/costume_thumb.webp" class="thumb" title="un voeu" alt="planche bd Bill et Bobby: Bill & Bobby ont droit à un voeu"></li>
-			<li onclick="imgSlider('images/webp/cristal_large.webp')"><img src="images/webp/cristal_thumb.webp" class="thumb" title="un voeu" alt="planche bd Bill et Bobby: Bill & Bobby ont droit à un voeu"></li>
+			<li onclick="imgSlider('images/webp/2021/chifoumi_large.webp')"><img src="images/webp/2021/chifoumi_thumb.webp" class="thumb" title="chifoumi" alt="planche bd Bill et Bobby: Une histoire de chifoumi"></li>
+			<li onclick="imgSlider('images/webp/2021/costume_large.webp')"><img src="images/webp/2021/costume_thumb.webp" class="thumb" title="costume" alt="planche bd Bill et Bobby: Une histoire de costume"></li>
+			<li onclick="imgSlider('images/webp/2021/cristal_large.webp')"><img src="images/webp/2021/cristal_thumb.webp" class="thumb" title="cristal" alt="planche bd Bill et Bobby: Une histoire de cristal"></li>
 
 		</ul>
 		<ul class="navigation">
 			<label>actu</label>
-				<li onclick="imgSlider('images/webp/actu/norvege.webp')"><a class="thumb_actu" title="norvege" alt="13/10/21">13/10/21</a></li>
-		</ul>
+				<li onclick="imgSlider('images/webp/actu/norvege_large.webp')"><img src="images/webp/actu/norvege_thumb.webp" class="actu_thumb" title="norvege" alt="norvege le 13 octobre 2021"></li>
+			</ul>
 		</div>
 	</section>
 	<footer>
