ajout dessin actu  tiramisu

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 			<label>actu</label>
 				<li onclick="imgSlider('images/webp/actu/norvege_large.webp')"><img src="images/webp/actu/norvege_thumb.webp" class="actu_thumb" title="norvege" alt="norvege le 13 octobre 2021"></li>
 				<li onclick="imgSlider('images/webp/actu/chasseur_large.webp')"><img src="images/webp/actu/chasseur_thumb.webp" class="actu_thumb" title="chasseur" alt="rennes le 31 octobre 2021"></li>
+				<li onclick="imgSlider('images/webp/actu/tiramisu_large.webp')"><img src="images/webp/actu/tiramisu_thumb.webp" class="actu_thumb" title="chasseur" alt="rennes le 31 octobre 2021"></li>
+			</ul>
 			</ul>
 		</div>
 	</section>
