ajout voyage + elections + PengShuai + modif vignette costme_thumb

--- a/index.html
+++ b/index.html
@@ -26,38 +26,41 @@
 		
 		<ul class="navigation">
 			<label>2020</label>
-			<li onclick="imgSlider('images/webp/rauque_large.webp')"><img src="images/webp/rauque_thumb.webp" class="thumb" title="un voeu" alt="planche bd Bill et Bobby: Bill & Bobby ont droit à un voeu"></li>
-			<li onclick="imgSlider('images/webp/blesse_large.webp')"><img src="images/webp/blesse_thumb.webp" class="thumb" title="l'humour" alt="planche bd Bill et Bobby: Bill & Bobby aiment bien l'humour"></li>
-			<li onclick="imgSlider('images/webp/capture_large.webp')"><img src="images/webp/capture_thumb.webp" class="thumb" title="chasseurs" alt="planche bd Bill et Bobby: Bill & Bobby sont des chasseurs"></li>
-			<li onclick="imgSlider('images/webp/cendre_large.webp')"><img src="images/webp/cendre_thumb.webp" class="thumb" title="montagne" alt="planche bd Bill et Bobby: Bill & Bobby montent une montagne"></li>
+			<li onclick="imgSlider('images/webp/2020/rauque_large.webp')"><img src="images/webp/2020/rauque_thumb.webp" class="thumb" title="un voeu" alt="planche bd Bill et Bobby: Bill & Bobby ont droit à un voeu"></li>
+			<li onclick="imgSlider('images/webp/2020/blesse_large.webp')"><img src="images/webp/2020/blesse_thumb.webp" class="thumb" title="l'humour" alt="planche bd Bill et Bobby: Bill & Bobby aiment bien l'humour"></li>
+			<li onclick="imgSlider('images/webp/2020/capture_large.webp')"><img src="images/webp/2020/capture_thumb.webp" class="thumb" title="chasseurs" alt="planche bd Bill et Bobby: Bill & Bobby sont des chasseurs"></li>
+			<li onclick="imgSlider('images/webp/2020/cendre_large.webp')"><img src="images/webp/2020/cendre_thumb.webp" class="thumb" title="montagne" alt="planche bd Bill et Bobby: Bill & Bobby montent une montagne"></li>
 
-			<li onclick="imgSlider('images/webp/construire_large.webp')"><img src="images/webp/construire_thumb.webp" class="thumb" title="discussion" alt="planche bd Bill et Bobby: Bill & Bobby discutent en marchant"></li>
-			<li onclick="imgSlider('images/webp/coronavirus_large.webp')"><img src="images/webp/coronavirus_thumb.webp" class="thumb" title="mutation" alt="planche bd Bill et Bobby: Bill & Bobby: le coronavirus mute"></li>
-			<li onclick="imgSlider('images/webp/coronavirus2_large.webp')"><img src="images/webp/coronavirus2_thumb.webp" class="thumb" title="le coronavirus" alt="planche bd Bill et Bobby: Bill & Bobby le coronavirus"></li>
-			<li onclick="imgSlider('images/webp/enchante_large.webp')"><img src="images/webp/enchante_thumb.webp" class="thumb" title="observés" alt="planche bd Bill et Bobby: Bill & Bobby sont observés"></li>
+			<li onclick="imgSlider('images/webp/2020/construire_large.webp')"><img src="images/webp/2020/construire_thumb.webp" class="thumb" title="discussion" alt="planche bd Bill et Bobby: Bill & Bobby discutent en marchant"></li>
+			<li onclick="imgSlider('images/webp/2020/coronavirus_large.webp')"><img src="images/webp/2020/coronavirus_thumb.webp" class="thumb" title="mutation" alt="planche bd Bill et Bobby: Bill & Bobby: le coronavirus mute"></li>
+			<li onclick="imgSlider('images/webp/2020/coronavirus2_large.webp')"><img src="images/webp/2020/coronavirus2_thumb.webp" class="thumb" title="le coronavirus" alt="planche bd Bill et Bobby: Bill & Bobby le coronavirus"></li>
+			<li onclick="imgSlider('images/webp/2020/enchante_large.webp')"><img src="images/webp/2020/enchante_thumb.webp" class="thumb" title="observés" alt="planche bd Bill et Bobby: Bill & Bobby sont observés"></li>
 
-			<li onclick="imgSlider('images/webp/fantome_large.webp')"><img src="images/webp/fantome_thumb.webp" class="thumb" title="fantômes" alt="planche bd Bill et Bobby: Bill & Bobby: une blague de fantôme"></li>
-			<li onclick="imgSlider('images/webp/fortunate-cookies_large.webp')"><img src="images/webp/fortunate-cookies_thumb.webp" class="thumb" title="fortune cookies" alt="planche bd Bill et Bobby: Bill & Bobby aiment les fortune cookies"></li>
-			<li onclick="imgSlider('images/webp/gag_large.webp')"><img src="images/webp/gag_thumb.webp" class="thumb" title="gags web" alt="planche bd Bill et Bobby: Bill & Bobby piquent des gags sur internet"></li>
-			<li onclick="imgSlider('images/webp/gele_large.webp')"><img src="images/webp/gele_thumb.webp" class="thumb" title="glaces" alt="planche bd Bill et Bobby: Bill & Bobby mangent des glaces"></li>
+			<li onclick="imgSlider('images/webp/2020/fantome_large.webp')"><img src="images/webp/2020/fantome_thumb.webp" class="thumb" title="fantômes" alt="planche bd Bill et Bobby: Bill & Bobby: une blague de fantôme"></li>
+			<li onclick="imgSlider('images/webp/2020/fortunate-cookies_large.webp')"><img src="images/webp/2020/fortunate-cookies_thumb.webp" class="thumb" title="fortune cookies" alt="planche bd Bill et Bobby: Bill & Bobby aiment les fortune cookies"></li>
+			<li onclick="imgSlider('images/webp/2020/gag_large.webp')"><img src="images/webp/2020/gag_thumb.webp" class="thumb" title="gags web" alt="planche bd Bill et Bobby: Bill & Bobby piquent des gags sur internet"></li>
+			<li onclick="imgSlider('images/webp/2020/gele_large.webp')"><img src="images/webp/2020/gele_thumb.webp" class="thumb" title="glaces" alt="planche bd Bill et Bobby: Bill & Bobby mangent des glaces"></li>
 
-			<li onclick="imgSlider('images/webp/histoire-etrange_large.webp')"><img src="images/webp/histoire-etrange_thumb.webp" class="thumb" title="étrange" alt="planche bd Bill et Bobby: Bill & Bobby dans une histoire étrange"></li>
-			<li onclick="imgSlider('images/webp/stupide_large.webp')"><img src="images/webp/stupide_thumb.webp" class="thumb" title="banane" alt="planche bd Bill et Bobby: Bill & Bobby dans une histoire de banane"></li>
-			<li onclick="imgSlider('images/webp/libres_large.webp')"><img src="images/webp/libres_thumb.webp" class="thumb" title="libres" alt="planche bd Bill et Bobby: Bill & Bobby sont libres"></li>
-			<li onclick="imgSlider('images/webp/magie_large.webp')"><img src="images/webp/magie_thumb.webp" class="thumb" title="magie" alt="planche bd Bill et Bobby: Bill & Bobby: le tour de magie"></li>
+			<li onclick="imgSlider('images/webp/2020/histoire-etrange_large.webp')"><img src="images/webp/2020/histoire-etrange_thumb.webp" class="thumb" title="étrange" alt="planche bd Bill et Bobby: Bill & Bobby dans une histoire étrange"></li>
+			<li onclick="imgSlider('images/webp/2020/stupide_large.webp')"><img src="images/webp/2020/stupide_thumb.webp" class="thumb" title="banane" alt="planche bd Bill et Bobby: Bill & Bobby dans une histoire de banane"></li>
+			<li onclick="imgSlider('images/webp/2020/libres_large.webp')"><img src="images/webp/2020/libres_thumb.webp" class="thumb" title="libres" alt="planche bd Bill et Bobby: Bill & Bobby sont libres"></li>
+			<li onclick="imgSlider('images/webp/2020/magie_large.webp')"><img src="images/webp/2020/magie_thumb.webp" class="thumb" title="magie" alt="planche bd Bill et Bobby: Bill & Bobby: le tour de magie"></li>
 
-			<li onclick="imgSlider('images/webp/malaisie_large.webp')"><img src="images/webp/malaisie_thumb.webp" class="thumb" title="Malaisie" alt="planche bd Bill et Bobby: Bill & Bobby en Malaisie"></li>
-			<li onclick="imgSlider('images/webp/marchent_large.webp')"><img src="images/webp/marchent_thumb.webp" class="thumb" title="orthographe" alt="planche bd Bill et Bobby: Bill & Bobby marchent"></li>
-			<li onclick="imgSlider('images/webp/maths_large.webp')"><img src="images/webp/maths_thumb.webp" class="thumb" title="blague maths" alt="planche bd Bill et Bobby: Bill & Bobby: des blagues en maths"></li>
-			<li onclick="imgSlider('images/webp/nombre_large.webp')"><img src="images/webp/nombre_thumb.webp" class="thumb" title="nombre" alt="planche bd Bill et Bobby: Bill & Bobby: un nombre dans la tête"></li>
+			<li onclick="imgSlider('images/webp/2020/malaisie_large.webp')"><img src="images/webp/2020/malaisie_thumb.webp" class="thumb" title="Malaisie" alt="planche bd Bill et Bobby: Bill & Bobby en Malaisie"></li>
+			<li onclick="imgSlider('images/webp/2020/marchent_large.webp')"><img src="images/webp/2020/marchent_thumb.webp" class="thumb" title="orthographe" alt="planche bd Bill et Bobby: Bill & Bobby marchent"></li>
+			<li onclick="imgSlider('images/webp/2020/maths_large.webp')"><img src="images/webp/2020/maths_thumb.webp" class="thumb" title="blague maths" alt="planche bd Bill et Bobby: Bill & Bobby: des blagues en maths"></li>
+			<li onclick="imgSlider('images/webp/2020/nombre_large.webp')"><img src="images/webp/2020/nombre_thumb.webp" class="thumb" title="nombre" alt="planche bd Bill et Bobby: Bill & Bobby: un nombre dans la tête"></li>
 		</ul>
 		<ul class="navigation">
 			
 		<label>2021</label>
 			<li onclick="imgSlider('images/webp/2021/chifoumi_large.webp')"><img src="images/webp/2021/chifoumi_thumb.webp" class="thumb" title="chifoumi" alt="planche bd Bill et Bobby: Une histoire de chifoumi"></li>
 			<li onclick="imgSlider('images/webp/2021/costume_large.webp')"><img src="images/webp/2021/costume_thumb.webp" class="thumb" title="costume" alt="planche bd Bill et Bobby: Une histoire de costume"></li>
+			<li onclick="imgSlider('images/webp/2021/elections_large.webp')"><img src="images/webp/2021/elections_thumb.webp" class="thumb" title="elections" alt="planche bd Bill et Bobby: Une histoire d'élections'"></li>
 			<li onclick="imgSlider('images/webp/2021/cristal_large.webp')"><img src="images/webp/2021/cristal_thumb.webp" class="thumb" title="cristal" alt="planche bd Bill et Bobby: Une histoire de cristal"></li>
-
+			<li onclick="imgSlider('images/webp/2021/voyage_large.webp')"><img src="images/webp/2021/voyage_thumb.webp" class="thumb" title="voyage" alt="planche bd Bill et Bobby: Une histoire de voyage"></li>
+			<li onclick="imgSlider('images/webp/2021/PengShuai_large.webp')"><img src="images/webp/2021/PengShuai_thumb.webp" class="thumb" title="PengShuai" alt="planche bd Bill et Bobby: Une histoire de cristal"></li>
+		
 		</ul>
 		<ul class="navigation">
 			<label>actu</label>
