ajout une histoire MDR + suppression des années

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  		<div class="summary">
 		
 		<ul class="navigation">
-			<label>2020</label>
+			<label>BD</label>
 			<li onclick="imgSlider('images/webp/2020/rauque_large.webp')"><img src="images/webp/2020/rauque_thumb.webp" class="thumb" title="un voeu" alt="planche bd Bill et Bobby: Bill & Bobby ont droit à un voeu"></li>
 			<li onclick="imgSlider('images/webp/2020/blesse_large.webp')"><img src="images/webp/2020/blesse_thumb.webp" class="thumb" title="l'humour" alt="planche bd Bill et Bobby: Bill & Bobby aiment bien l'humour"></li>
 			<li onclick="imgSlider('images/webp/2020/capture_large.webp')"><img src="images/webp/2020/capture_thumb.webp" class="thumb" title="chasseurs" alt="planche bd Bill et Bobby: Bill & Bobby sont des chasseurs"></li>
@@ -50,20 +50,19 @@
 			<li onclick="imgSlider('images/webp/2020/marchent_large.webp')"><img src="images/webp/2020/marchent_thumb.webp" class="thumb" title="orthographe" alt="planche bd Bill et Bobby: Bill & Bobby marchent"></li>
 			<li onclick="imgSlider('images/webp/2020/maths_large.webp')"><img src="images/webp/2020/maths_thumb.webp" class="thumb" title="blague maths" alt="planche bd Bill et Bobby: Bill & Bobby: des blagues en maths"></li>
 			<li onclick="imgSlider('images/webp/2020/nombre_large.webp')"><img src="images/webp/2020/nombre_thumb.webp" class="thumb" title="nombre" alt="planche bd Bill et Bobby: Bill & Bobby: un nombre dans la tête"></li>
-		</ul>
-		<ul class="navigation">
 			
-		<label>2021</label>
 			<li onclick="imgSlider('images/webp/2021/chifoumi_large.webp')"><img src="images/webp/2021/chifoumi_thumb.webp" class="thumb" title="chifoumi" alt="planche bd Bill et Bobby: Une histoire de chifoumi"></li>
 			<li onclick="imgSlider('images/webp/2021/costume_large.webp')"><img src="images/webp/2021/costume_thumb.webp" class="thumb" title="costume" alt="planche bd Bill et Bobby: Une histoire de costume"></li>
 			<li onclick="imgSlider('images/webp/2021/elections_large.webp')"><img src="images/webp/2021/elections_thumb.webp" class="thumb" title="elections" alt="planche bd Bill et Bobby: Une histoire d'élections'"></li>
 			<li onclick="imgSlider('images/webp/2021/cristal_large.webp')"><img src="images/webp/2021/cristal_thumb.webp" class="thumb" title="cristal" alt="planche bd Bill et Bobby: Une histoire de cristal"></li>
 			<li onclick="imgSlider('images/webp/2021/voyage_large.webp')"><img src="images/webp/2021/voyage_thumb.webp" class="thumb" title="voyage" alt="planche bd Bill et Bobby: Une histoire de voyage"></li>
-			<li onclick="imgSlider('images/webp/2021/PengShuai_large.webp')"><img src="images/webp/2021/PengShuai_thumb.webp" class="thumb" title="PengShuai" alt="planche bd Bill et Bobby: Une histoire de cristal"></li>
+			<li onclick="imgSlider('images/webp/2021/PengShuai_large.webp')"><img src="images/webp/2021/PengShuai_thumb.webp" class="thumb" title="PengShuai" alt="planche bd Bill et Bobby: Une histoire de Chine"></li>
 		
+			<li onclick="imgSlider('images/webp/2022/poil_large.webp')"><img src="images/webp/2022/poil_thumb.webp" class="thumb" title="PengShuai" alt="planche bd Bill et Bobby: Une histoire de MDR"></li>
+
 		</ul>
 		<ul class="navigation">
-			<label>actu</label>
+			<label>ACTU</label>
 				<li onclick="imgSlider('images/webp/actu/norvege_large.webp')"><img src="images/webp/actu/norvege_thumb.webp" class="actu_thumb" title="norvege" alt="norvege le 13 octobre 2021"></li>
 				<li onclick="imgSlider('images/webp/actu/chasseur_large.webp')"><img src="images/webp/actu/chasseur_thumb.webp" class="actu_thumb" title="chasseur" alt="rennes le 31 octobre 2021"></li>
 				<li onclick="imgSlider('images/webp/actu/tiramisu_large.webp')"><img src="images/webp/actu/tiramisu_thumb.webp" class="actu_thumb" title="chasseur" alt="rennes le 31 octobre 2021"></li>
