album bill et bobby + lien oreille

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
 	</header>
 	<section>
 		<div id="comics">
-			<img src="images/webp/2020/rauque_large.webp" id="slider">
+			<img src="images/webp/2022/pub_large.webp" id="slider">
 		</div>
 
  		<div class="summary">
 		
 		<ul class="navigation">
 			<label>BD</label>
+
+			<li onclick="imgSlider('images/webp/2022/pub_large.webp')"><img src="images/webp/2022/pub_thumb.webp" class="thumb" title="album" alt="planche bd Bill et Bobby: Bill & Bobby l'abum"></li>
+
 			<li onclick="imgSlider('images/webp/2020/rauque_large.webp')"><img src="images/webp/2020/rauque_thumb.webp" class="thumb" title="un voeu" alt="planche bd Bill et Bobby: Bill & Bobby ont droit à un voeu"></li>
 			<li onclick="imgSlider('images/webp/2020/blesse_large.webp')"><img src="images/webp/2020/blesse_thumb.webp" class="thumb" title="l'humour" alt="planche bd Bill et Bobby: Bill & Bobby aiment bien l'humour"></li>
 			<li onclick="imgSlider('images/webp/2020/capture_large.webp')"><img src="images/webp/2020/capture_thumb.webp" class="thumb" title="chasseurs" alt="planche bd Bill et Bobby: Bill & Bobby sont des chasseurs"></li>
@@ -67,6 +70,11 @@
 				<li onclick="imgSlider('images/webp/actu/chasseur_large.webp')"><img src="images/webp/actu/chasseur_thumb.webp" class="actu_thumb" title="chasseur" alt="rennes le 31 octobre 2021"></li>
 				<li onclick="imgSlider('images/webp/actu/tiramisu_large.webp')"><img src="images/webp/actu/tiramisu_thumb.webp" class="actu_thumb" title="chasseur" alt="rennes le 31 octobre 2021"></li>
 			</ul>
+			</ul>
+
+			<ul class="navigation">
+				<label>L'ALBUM sur le site de l'assosiation</label>
+				<li><a href="http://loreillequivoit.eu/"><img src="images/webp/2022/logo.webp" height="100" width="auto"></a></li>
 			</ul>
 		</div>
 	</section>
