--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</ul>
 
 			<ul class="navigation">
-				<label>L'ALBUM sur le site de l'assosiation</label>
+				<label>L'ALBUM sur le site de l'association</label>
 				<li><a href="http://loreillequivoit.eu/"><img src="images/webp/2022/logo.webp" height="100" width="auto"></a></li>
 			</ul>
 		</div>
