modif logo oreille sur mobile

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<li onclick="imgSlider('images/webp/2022/poil_large.webp')"><img src="images/webp/2022/poil_thumb.webp" class="thumb" title="PengShuai" alt="planche bd Bill et Bobby: Une histoire de MDR"></li>
 
 		</ul>
-		<ul class="navigation">
+		<ul class="actu">
 			<label>ACTU</label>
 				<li onclick="imgSlider('images/webp/actu/norvege_large.webp')"><img src="images/webp/actu/norvege_thumb.webp" class="actu_thumb" title="norvege" alt="norvege le 13 octobre 2021"></li>
 				<li onclick="imgSlider('images/webp/actu/chasseur_large.webp')"><img src="images/webp/actu/chasseur_thumb.webp" class="actu_thumb" title="chasseur" alt="rennes le 31 octobre 2021"></li>
@@ -72,8 +72,8 @@
 			</ul>
 			</ul>
 
-			<ul class="navigation">
-				<label>L'ALBUM sur le site de l'association</label>
+			<ul class="navigation2">
+				<label ><strong>L'ALBUM sur le site de l'association</strong></label><br>
 				<li><a href="http://loreillequivoit.eu/"><img src="images/webp/2022/logo.webp" height="100" width="auto"></a></li>
 			</ul>
 		</div>
